[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.64.0",
    "cohere>=5.17.0",
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "mistralai>=1.9.6",
    "pymysql>=1.1.1",
    "sqlalchemy>=2.0.43",
    "tidb-vector>=0.0.15",
    "uvicorn>=0.35.0",
]
